# timed_release_crypto

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: generate_large_prime.rs
examples/: basic.rs
src/: lib.rs  main.rs
tests/: puzzle_time_under_30_min.rs
